<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/add_new_quarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/start_date"
        android:layout_alignLeft="@+id/add_new_syllabus_category"
        android:layout_alignTop="@+id/start_date"
        android:onClick="onClickAddNewQuarter"
        android:text="@string/add_quarter"
        android:textSize="8dp"/>

    <Button
        android:id="@+id/add_new_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAddNewCourse"
        android:enabled="true"
        android:text="@string/add_course"
        android:textSize="8dp"
        android:layout_alignTop="@+id/catalog_name"
        android:layout_alignLeft="@id/add_new_quarter"/>

    <Button
        android:id="@+id/add_new_syllabus_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAddNewSyllabusCategory"
        android:enabled="true"
        android:text="@string/add_category"
        android:textSize="8dp"
        android:layout_below="@+id/new_syllabus_category"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/syllabus_category_name" />

    <Button
        android:id="@+id/done_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickDone"
        android:enabled="true"
        android:text="@string/done"
        android:textSize="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />


    <EditText
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_quarter"
        android:ems="10"
        android:text="@string/start_date"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textStyle="italic"
        android:textSize="10dp"
        android:inputType="date"/>

    <EditText
        android:id="@+id/syllabus_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_syllabus_category"
        android:text="@string/syllabus_category_name"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textStyle="italic"
        android:textSize="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"/>




    <EditText
        android:id="@+id/catalog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog_name"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textStyle="italic"
        android:textSize="10dp"
        android:ems="10"
        android:layout_below="@+id/new_course"
        android:layout_alignParentStart="true" />



    <EditText
        android:id="@+id/full_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/catalog_name"
        android:text="@string/full_course_name"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textStyle="italic"
        android:textSize="10dp"
        android:ems="10" />

    <Spinner
        android:id="@+id/quarter_of_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_course_name"
        android:layout_alignEnd="@+id/new_syllabus_category" />


    <TextView
        android:id="@+id/new_quarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="60dp"
        android:text="@string/new_quarter"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/new_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_below="@+id/end_date"
        android:layout_marginTop="20dp"
        android:text="@string/new_course"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/new_syllabus_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_syllabus_category"
        android:textSize="18dp"
        android:layout_below="@+id/credits"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/end_date"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textStyle="italic"
        android:textSize="10dp"
        android:inputType="date"
        android:layout_below="@+id/start_date"
        android:layout_alignParentStart="true" />


    <SeekBar
        android:id="@+id/difficulty"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="5"
        android:layout_below="@+id/quarter_of_course"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <RatingBar
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty"
        android:scaleX=".7"
        android:scaleY=".7"
        android:layout_alignParentStart="true"
        android:rating="3"/>

    <SeekBar
        android:id="@+id/percentage_of_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_below="@+id/syllabus_category_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        android:onClick="onClickGradePercentage"/>
    <TextView
        android:id="@+id/percentage_label"
        android:layout_marginLeft="-40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/percentage_of_grade"
        android:layout_toRightOf="@id/percentage_of_grade"
        android:text="0%"
        android:textSize="10dp"/>

    <Spinner
        android:id="@+id/syllabus_category_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/syllabus_category_name"
        android:layout_toRightOf="@+id/syllabus_category_name"
        android:entries="@array/syllabusCategoryTypes"/>

    <Spinner
        android:id="@+id/quarter_of_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/percentage_label"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/course_of_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/quarter_of_category"
        android:layout_alignTop="@id/quarter_of_category"
        android:textColor="@drawable/googleg_standard_color_18"/>

</RelativeLayout>
